# VAE

./: .gitignore  README.md  configs.py  dataset.py  datasets.py  main.py  model.py  pyproject.toml  train.py
vae/: app.py  configs.py  model.py  train.py
